@@ -45,17 +45,15 @@ dependencies {
 
     testCompile "org.testfx:testfx-junit:4.0.+"
     testCompile "org.testfx:testfx-core:4.0.+"
-    // Declare the dependency for your favourite test framework you want to use in your tests.
-    // TestNG is also supported by the Gradle Test task. Just change the
-    // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
-    // 'test.useTestNG()' to your build script.
-    testCompile 'junit:junit:4.12'
+    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.3.1'
 }
 
 allprojects {
     gradle.projectsEvaluated {
         tasks.withType(JavaCompile) {
-            options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+            // tweak for java 9: com.sun.javafx.scene.control is not exported for public use
+            // https://stackoverflow.com/a/47265102
+            options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation" << "--add-exports=javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED"
         }
     }
 }
